DNN_Trial/bash_scripts/CatBoost/CatBoost_Olympus_V1_871755.err
/home/mburu/.local/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.
  warnings.warn(
Traceback (most recent call last):
  File "train.py", line 144, in <module>
    main(arguments)
  File "train.py", line 106, in main
    model_name = str2model(args.model_name)
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/__init__.py", line 33, in str2model
    from models.tree_models import CatBoost
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/tree_models.py", line 102
    print(f"Train Directory:{"/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/output/CatBoost/" + self.args.dataset + "/catboost_info"}")
                                                                                                                                          ^
SyntaxError: invalid syntax
srun: error: stud-000: task 0: Exited with exit code 1
/home/mburu/.local/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.
  warnings.warn(
Traceback (most recent call last):
  File "train.py", line 144, in <module>
    main(arguments)
  File "train.py", line 106, in main
    model_name = str2model(args.model_name)
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/__init__.py", line 33, in str2model
    from models.tree_models import CatBoost
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/tree_models.py", line 102
    print(f"Train Directory:{"/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/output/CatBoost/" + self.args.dataset + "/catboost_info"}")
                                                                                                                                          ^
SyntaxError: invalid syntax
srun: error: stud-000: task 0: Exited with exit code 1
/home/mburu/.local/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.
  warnings.warn(
Traceback (most recent call last):
  File "train.py", line 144, in <module>
    main(arguments)
  File "train.py", line 106, in main
    model_name = str2model(args.model_name)
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/__init__.py", line 33, in str2model
    from models.tree_models import CatBoost
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/tree_models.py", line 102
    print(f"Train Directory:{"/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/output/CatBoost/" + self.args.dataset + "/catboost_info"}")
                                                                                                                                          ^
SyntaxError: invalid syntax
srun: error: stud-000: task 0: Exited with exit code 1
/home/mburu/.local/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.
  warnings.warn(
Traceback (most recent call last):
  File "train.py", line 144, in <module>
    main(arguments)
  File "train.py", line 106, in main
    model_name = str2model(args.model_name)
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/__init__.py", line 33, in str2model
    from models.tree_models import CatBoost
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/tree_models.py", line 102
    print(f"Train Directory:{"/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/output/CatBoost/" + self.args.dataset + "/catboost_info"}")
                                                                                                                                          ^
SyntaxError: invalid syntax
srun: error: stud-000: task 0: Exited with exit code 1
/home/mburu/.local/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.
  warnings.warn(
Traceback (most recent call last):
  File "train.py", line 144, in <module>
    main(arguments)
  File "train.py", line 106, in main
    model_name = str2model(args.model_name)
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/__init__.py", line 33, in str2model
    from models.tree_models import CatBoost
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/models/tree_models.py", line 102
    print(f"Train Directory:{"/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/output/CatBoost/" + self.args.dataset + "/catboost_info"}")
                                                                                                                                          ^
SyntaxError: invalid syntax
srun: error: stud-000: task 0: Exited with exit code 1
